--- a/styles.css
+++ b/styles.css
@@ -148,16 +148,16 @@ button {
 }
 
 #histories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
 }
 
 .card {
   width: 100%;
   height: 100%;
   padding: 50px;
-  display: flex;
+  display: block;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
@@ -169,6 +169,9 @@ button {
       rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
+}
+.card p {
+  margin-top: 15px;
 }
 
 .modal-gap {
@@ -195,5 +198,8 @@ button {
 
   .card {
     flex-direction: column;
+  }
+  #histories {
+    grid-template-columns: 1fr;
   }
 }
